[package]
name = "smc"
version = "0.2.0"

authors = ["Domenico Shura <shura1991@gmail.com>"]
license = "WTFPL"
edition = "2018"

description = "macOS SMC implementation."
repository = "https://github.com/shurizzle/rust-smc"
keywords = ["macos", "smc", "cpu", "fan", "themal"]

[target.'cfg(target_os = "macos")'.dependencies]
lazy_static = "1.3.0"
libc = "0.2.50"
four-char-code = "0.0.4"
