[package]
name = "smc"
version = "0.2.4"

authors = ["Domenico Shura <shura1991@gmail.com>"]
license = "WTFPL"
edition = "2018"

description = "macOS SMC implementation."
repository = "https://github.com/shurizzle/rust-smc"
keywords = ["macos", "smc", "cpu", "fan", "themal"]

[target.'cfg(target_os = "macos")'.dependencies]
byteorder = "1.4"
lazy_static = "1.4.0"
libc = "0.2.145"
four-char-code = "0.0.5"
