[package]
name = "smc"
version = "1.0.0"
authors = ["shurizzle <shura1991@gmail.com>"]
license = "MIT"
edition = "2021"

description = "macOS SMC implementation."
repository = "https://github.com/shurizzle/rust-smc"
keywords = ["macos", "smc", "cpu", "fan", "thermal"]

[features]
default = []
std = []

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.50"
four-char-code = "2"
